--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@angular/compiler": "~10.0.0-next.0",
     "@angular/core": "~10.0.0-next.0",
     "@angular/forms": "~10.0.0-next.0",
+    "@angular/material": "^9.2.1",
     "@angular/platform-browser": "~10.0.0-next.0",
     "@angular/platform-browser-dynamic": "~10.0.0-next.0",
     "@angular/router": "~10.0.0-next.0",
+    "@types/jquery": "^3.3.35",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.0",
