--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,10 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+
+
             ]
           },
           "configurations": {
