--- a/package.json
+++ b/package.json
@@ -24,19 +24,23 @@
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.0",
+    "lodash": "^4.17.15",
+    "ng-select2": "^1.2.2",
+    "ng2-select2": "^1.0.0-beta.16",
     "rxjs": "~6.5.4",
     "save": "^2.4.0",
+    "select2": "^4.0.13",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0-next.0",
+    "@angular-devkit/build-angular": "^0.1000.0-next.5",
     "@angular/cli": "~10.0.0-next.0",
     "@angular/compiler-cli": "~10.0.0-next.0",
     "@angular/language-service": "~10.0.0-next.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
