--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.0-next.0",
-    "@angular/common": "~10.0.0-next.0",
-    "@angular/compiler": "~10.0.0-next.0",
-    "@angular/core": "~10.0.0-next.0",
-    "@angular/forms": "~10.0.0-next.0",
-    "@angular/material": "^9.2.1",
-    "@angular/platform-browser": "~10.0.0-next.0",
-    "@angular/platform-browser-dynamic": "~10.0.0-next.0",
-    "@angular/router": "~10.0.0-next.0",
+    "@angular/animations": "^10.0.0-rc.0",
+    "@angular/common": "^10.0.0-rc.0",
+    "@angular/compiler": "^10.0.0-rc.0",
+    "@angular/core": "^10.0.0-rc.0",
+    "@angular/forms": "^10.0.0-rc.0",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "^10.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^10.0.0-rc.0",
+    "@angular/router": "^10.0.0-rc.0",
     "@types/jquery": "^3.3.35",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.0",
     "lodash": "^4.17.15",
@@ -30,28 +30,28 @@
     "rxjs": "~6.5.4",
     "save": "^2.4.0",
     "select2": "^4.0.13",
-    "tslib": "^1.10.0",
+    "tslib": "^1.13.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.0-next.5",
-    "@angular/cli": "~10.0.0-next.0",
-    "@angular/compiler-cli": "~10.0.0-next.0",
-    "@angular/language-service": "~10.0.0-next.0",
+    "@angular/cli": "^10.0.0-rc.0",
+    "@angular/compiler-cli": "^10.0.0-rc.0",
+    "@angular/language-service": "^10.0.0-rc.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.42",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-spec-reporter": "^5.0.2",
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.3"
   }
 }
