--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.15",
     "ng-select2": "^1.2.2",
     "ng2-select2": "^1.0.0-beta.16",
+    "pdfmake": "^0.1.65",
     "rxjs": "~6.5.4",
     "save": "^2.4.0",
     "select2": "^4.0.13",
