--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^10.0.0-rc.0",
     "@angular/platform-browser-dynamic": "^10.0.0-rc.0",
     "@angular/router": "^10.0.0-rc.0",
+    "@auth0/angular-jwt": "^4.2.0",
     "@types/jquery": "^3.3.35",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
